--- a/app/src/main/res/layout-land/activity_usuario.xml
+++ b/app/src/main/res/layout-land/activity_usuario.xml
@@ -102,7 +102,7 @@
 
         <EditText
             android:id="@+id/editTextNombreUsuario"
-            android:layout_width="246dp"
+            android:layout_width="560dp"
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:hint="@string/nombres"
@@ -121,7 +121,7 @@
 
         <EditText
             android:id="@+id/edittextApellidoUsuario"
-            android:layout_width="246dp"
+            android:layout_width="560dp"
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:hint="@string/apellidos"
@@ -139,14 +139,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextNombreUsuario" />
 
-        <EditText
+        <TextView
             android:id="@+id/editTextCorreoUsuario"
-            android:layout_width="246dp"
-            android:layout_height="48dp"
+            android:layout_width="560dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:hint="@string/correo"
             android:background="@drawable/rounded_edittext"
-            android:inputType="text"
             android:paddingStart="16dp"
             android:paddingTop="10dp"
             android:paddingEnd="16dp"
@@ -160,7 +159,7 @@
 
         <EditText
             android:id="@+id/editTextTelefonoUsuario"
-            android:layout_width="246dp"
+            android:layout_width="560dp"
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:hint="@string/celular"
