--- a/app/src/main/res/layout-land/activity_lista_notas_finalizadas.xml
+++ b/app/src/main/res/layout-land/activity_lista_notas_finalizadas.xml
@@ -117,6 +117,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/viewRectanguloNotasFinalizadas" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerFinalizadas"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/viewRectanguloNotasFinalizadas"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/viewRectanguloNotasFinalizadas"
+            app:layout_constraintTop_toBottomOf="@+id/ButtonListaNotasNoFinalizadas2" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
