--- a/app/src/main/res/layout-land/activity_lista_notas_no_finalizadas.xml
+++ b/app/src/main/res/layout-land/activity_lista_notas_no_finalizadas.xml
@@ -115,5 +115,15 @@
             android:textSize="13sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/viewRectanguloNotasNoFinalizadas" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerNoFinalizadas"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/viewRectanguloNotasNoFinalizadas"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/viewRectanguloNotasNoFinalizadas"
+            app:layout_constraintTop_toBottomOf="@+id/ButtonListaNotasNoFinalizadas1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
