--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -193,6 +193,18 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextTelefonoUsuario"
             app:layout_constraintVertical_bias="0.17000002" />
 
+        <ImageButton
+            android:id="@+id/imageButtonCambiarUsuario"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@null"
+            android:contentDescription="@string/cambiar_usuario"
+            app:layout_constraintStart_toEndOf="@+id/textViewNombreUsuario"
+            app:layout_constraintTop_toTopOf="@+id/textViewNombreUsuario"
+            app:srcCompat="@drawable/baseline_change_circle_24" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
