--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:fitsSystemWindows="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
@@ -53,8 +54,8 @@
 
         <TextView
             android:id="@+id/textViewUsernameOcorreo"
-            android:layout_width="198dp"
-            android:layout_height="31dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/inter_medium"
             android:text="@string/usernameocorreo"
             android:textColor="#575757"
@@ -111,8 +112,8 @@
 
         <TextView
             android:id="@+id/textViewPasswordLogin"
-            android:layout_width="102dp"
-            android:layout_height="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/inter_medium"
             android:text="@string/password"
             android:textColor="#575757"
@@ -126,7 +127,7 @@
         <Button
             android:id="@+id/buttonIniciarSesionLogin"
             android:layout_width="155dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:backgroundTint="#2F5596"
             android:fontFamily="@font/inter_medium"
             android:text="@string/iniciarsesion"
