--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -6,7 +6,8 @@
     android:id="@+id/main"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#2F5596"
-    tools:context=".RecuperarActivity">
+    tools:context=".RecuperarActivity"
+    android:fitsSystemWindows="true">
 
     <ImageView
         android:id="@+id/imageViewLogoRecuperar"
