--- a/app/src/main/res/layout-land/activity_registro.xml
+++ b/app/src/main/res/layout-land/activity_registro.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:id="@+id/mains">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
